@@ -1,0 +1,18 @@
+{
+	"name": "ircmaxell/password-compat",
+	"description": "A compatibility library for the proposed simplified password hashing algorithm: https://wiki.php.net/rfc/password_hash",
+	"version": "1.0.3",
+	"keywords": ["password", "hashing"],
+	"homepage": "https://github.com/ircmaxell/password_compat",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "Anthony Ferrara",
+			"email": "ircmaxell@php.net",
+			"homepage": "http://blog.ircmaxell.com"
+		}
+	],
+	"autoload": {
+		"files": ["lib/password.php"]
+	}
+}
